# wifi-camera-monitor

./: .gitignore
tcp_server/: Cargo.toml
tcp_server/.cargo/: config.toml
tcp_server/src/: main.rs
tcp_server/src/builder/: mod.rs  servo_pio_builder.rs
tcp_server/src/resources/: gpio_list.rs  mod.rs
tcp_server/src/tasks/: display.rs  fade.rs  mod.rs  servo_pio.rs
